--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit==1.28.1
 opencv-python==4.8.1.78
-numpy==1.24.3
+numpy==1.26.4  # Updated to a version compatible with Python 3.13
 Pillow==10.0.1
+setuptools==69.0.3  # Added to fix build issues
