Update requirements.txt for package versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.28.1
 opencv-python==4.8.1.78
-numpy==1.26.4  # Updated to a version compatible with Python 3.13
+numpy==1.26.4
 Pillow==10.0.1
-setuptools==69.0.3  # Added to fix build issues
+setuptools==69.0.3
