--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.28.1
-opencv-python==4.8.1.78
-numpy==2.0.0  # Updated to latest stable for Python 3.13 support
-Pillow==11.0.0  # Updated to latest stable (or use Pillow>=11.0.0 for auto-updates)
-setuptools==69.0.3
+
+streamlit==1.40.1  # Latest stable (supports NumPy 2.0+)
+opencv-python==4.10.0.84  # Latest stable for better compatibility
+numpy==2.0.0  # Keep for Python 3.13 support
+Pillow==11.0.0  # Latest stable (fixed the build issue)
+setuptools==75.6.0  # Latest stable
